--- a/translation_5.4.3.1/po/blanket.po
+++ b/translation_5.4.3.1/po/blanket.po
@@ -17,7 +17,7 @@ msgid "adtcp.backup.path"
 msgstr "/opt/amazon/dtcp_backups/active_screensvr.png"
 
 msgid "adtcp.button.unlock"
-msgstr "Přejeďte prstem pro odemčení"
+msgstr "Prejdite prstom pre odomknutie"
 
 msgid "adtcp.button.unlock.fontsize"
 msgstr "10"
@@ -32,7 +32,7 @@ msgid "langpicker.arrow.offset"
 msgstr "27.53"
 
 msgid "langpicker.cancel.label"
-msgstr "Zrušit"
+msgstr "Zrušiť"
 
 msgid "langpicker.cell.height"
 msgstr "30.30"
@@ -59,7 +59,7 @@ msgid "langpicker.confirm.buttons.width"
 msgstr "93.56"
 
 msgid "langpicker.confirm.message %s"
-msgstr "Použít jazyk %s jako jazyk vašeho Kindlu?"
+msgstr "Použiť jazyk %s ako jazyk vášho Kindlu?"
 
 msgid "langpicker.confirm.message.left"
 msgstr "9.89"
@@ -92,7 +92,7 @@ msgid "ota.overlay.y_off"
 msgstr "52.60"
 
 msgid "ota.update.errorcode %s"
-msgstr "Chyba aktualizace: %s"
+msgstr "Chyba aktualizácie: %s"
 
 msgid "ota.update.errorcode %s.fontsize"
 msgstr "14"
@@ -102,11 +102,11 @@ msgstr "0,64.67,258.68,100.88"
 
 msgid "ota.update.failed"
 msgstr ""
-"Aktualizace neproběhla správně.\n"
+"Aktualizáciu sa nepodarilo nainštalovať.\n"
 "\n"
-"Pokud potřebujete pomoc navštivte www.kindle.com/support.\n"
+"AK potrebujete pomoc navštívte www.kindle.com/support.\n"
 "\n"
-"Pro pokračování práce s Kindlem stiskněte vypínací tlačítko."
+"Pre pokračovanie práce s Kindlom stlačte vypínacie tlačidlo."
 
 msgid "ota.update.failed.fontsize"
 msgstr "12"
@@ -118,7 +118,7 @@ msgid "ota.update.failed.spacing"
 msgstr "2.5"
 
 msgid "ota.update.header"
-msgstr "Aktualizace softwaru"
+msgstr "Aktualizácia softvéru"
 
 msgid "ota.update.header.fontsize"
 msgstr "12"
@@ -128,11 +128,11 @@ msgstr "0,14.65,258.68,12.07"
 
 msgid "ota.update.initial"
 msgstr ""
-"Váš Kindle se aktualizuje. To může chvíli trvat.\n"
+"Kindle sa práve aktualizuje. Môže to chvíľu trvať.\n"
 "\n"
-"NEVYPÍNEJTE Kindle během procesu aktualizace.\n"
+"NEVYPÍNAJTE Kindle počas procesu aktualizácie.\n"
 "\n"
-"Váš Kindle se po dokončení aktualizace automaticky sám restartuje."
+"Kindle sa po dokončení aktualizácie automaticky reštartuje."
 
 msgid "ota.update.initial.fontsize"
 msgstr "12"
@@ -145,9 +145,9 @@ msgstr "2.5"
 
 msgid "ota.update.success"
 msgstr ""
-"Aktualizace proběhla úspěšně.\n"
+"Aktualizácia prebehla úspešne.\n"
 "\n"
-"Váš Kindle se právě restartuje..."
+"Kindle sa práve reštartuje..."
 
 msgid "ota.update.success.fontsize"
 msgstr "12"
@@ -165,7 +165,7 @@ msgid "progress_bar.rect"
 msgstr "43.11,64.67,172.45,12.93"
 
 msgid "shutdown.cust_service.header"
-msgstr "Kindle je třeba opravit"
+msgstr "Kindle je nutné opraviť"
 
 msgid "shutdown.cust_service.header.fontsize"
 msgstr "12"
@@ -175,12 +175,12 @@ msgstr "0,14.65,258.68,12.07"
 
 msgid "shutdown.cust_service.message"
 msgstr ""
-"Váš Kindle potřebuje opravit.\n"
+"Váš Kindle je nutné opraviť.\n"
 "\n"
-"Prosím kontaktujte službu péče o zákazníky na \n"
+"Prosím kontaktujte službu starostlivosti o zákazníkov na \n"
 "http://www.kindle.com/support.\n"
 "Kód opravy:%d\n"
-"Verze:%lld\n"
+"Verzia:%lld\n"
 "DSN:%s"
 
 msgid "shutdown.cust_service.message.fontsize"
@@ -194,7 +194,7 @@ msgstr "2.5"
 
 msgid "shutdown.fontupdate.message"
 msgstr ""
-"Prosím počkejte, než nainstalujeme aktualizovaná písma. To může trvat několik minut."
+"Prosím počkajte, kým sa nainštalujú aktualizované písma. Môže to trvať niekoľko minút."
 
 msgid "shutdown.fontupdate.message.fontsize"
 msgstr "12"
@@ -206,7 +206,7 @@ msgid "shutdown.fontupdate.message.spacing"
 msgstr "2.5"
 
 msgid "shutdown.reboot.message"
-msgstr "Prosím počkejte, než váš Kindle naběhne."
+msgstr "Počkajte prosím, kým sa Kindle nespustí."
 
 msgid "shutdown.reboot.message.fontsize"
 msgstr "12"
@@ -276,8 +276,8 @@ msgstr "0,14.65,258.68,12.07"
 
 msgid "usb.screen.message"
 msgstr ""
-"Pokud chcete číst nebo nakupovat během nabíjení přes USB, prosím nechte "
-"USB kabel připojený, ale odeberte Kindle ve svém počítači."
+"Pokiaľ chcete čítať alebo nakupovať počas nabíjania cez USB, ponechajte prosím"
+"USB kábel pripojený a bezpečne odstráňte Kindle z vášho počítača."
 
 msgid "usb.screen.message.fontsize"
 msgstr "12"
@@ -290,9 +290,9 @@ msgstr "2.5"
 
 msgid "usb.screen.message_nc"
 msgstr ""
-"Pokud si přejete pracovat s svým Kindlem, odeberte jej v počítači.\n"
+"Pokiaľ si prajete pracovať so svojím Kindlom, odoberte ho z počítača.\n"
 "\n"
-"Kindle se nenabíjí."
+"Kindle sa nenabíja."
 
 msgid "usb.screen.message_nc.fontsize"
 msgstr "12"
