--- a/translation_5.4.3.1/po/contentpackd.po
+++ b/translation_5.4.3.1/po/contentpackd.po
@@ -14,7 +14,7 @@ msgstr ""
 "Plural-Forms: nplurals=3; plural=(n==1) ? 0 : (n>=2 && n<=4) ? 1 : 2;\n"
 
 msgid "cp.fonts.updated"
-msgstr "Písma aktualizována"
+msgstr "Písma aktualizované"
 # msgstr "Fonts Updated"
 
 
