--- a/translation_5.4.3.1/po/kb-pt_BR.po
+++ b/translation_5.4.3.1/po/kb-pt_BR.po
@@ -13,7 +13,7 @@ msgstr ""
 
 
 msgid "Portuguese-BR"
-msgstr "Portugalská (Brazílie)"
+msgstr "Portugalská (Brazília)"
 # msgstr "Portuguese (Brazil)"
 
 
