--- a/translation_5.4.3.1/po/kb-zh_CN.po
+++ b/translation_5.4.3.1/po/kb-zh_CN.po
@@ -13,7 +13,7 @@ msgstr ""
 
 
 msgid "Simplified-Chinese"
-msgstr "Čínská (zjednodušená)"
+msgstr "Čínska (zjednodušená)"
 # msgstr "Chinese (Simplified)"
 
 
