--- a/translation_5.4.3.1/po/webkit-2.0.po
+++ b/translation_5.4.3.1/po/webkit-2.0.po
@@ -21,7 +21,7 @@ msgid "A bitmask representing the state of the modifier keys"
 msgstr "Bitová maska reprezentujúca stav modifikátorových kláves"
 
 msgid "A username and password are being requested by the site %s"
-msgstr "Užívateľské meno a heslo je požadované stránkou %s"
+msgstr "Užívateľské meno a heslo je vyžadované stránkou %s"
 
 msgid "Alternate Title"
 msgstr "Alternatívny nadpis"
