--- a/translation_5.4.3.1/translation/com/amazon/kindle/resources/CommunicationManager_en_GB.properties
+++ b/translation_5.4.3.1/translation/com/amazon/kindle/resources/CommunicationManager_en_GB.properties
@@ -1,4 +1,4 @@
-comm.message.connecting=Bezdrátové pripájanie
+comm.message.connecting=Bezdrôtové pripájanie
 comm.message.items.deleted=Položky odstránené
 comm.message.items.downloaded=Položky stiahnuté
 comm.message.no.new.items=Žiadne nové položky
